se agego mensajes

--- a/apps/notas/templates/panel_docente/panel.html
+++ b/apps/notas/templates/panel_docente/panel.html
@@ -23,3 +23,13 @@
         </ul>
     </li>
     {% endblock funciones %}
+
+    {% block mensajes %}
+        {% if messages %}
+            <div class="card-panel">
+                {% for mensaje in mensajes %}
+                    {{ mensaje }}
+                {% endfor %}
+            </div>
+        {% endif %}
+    {% endblock mensajes %}
