--- a/apps/users/templates/users/panel/base_panel.html
+++ b/apps/users/templates/users/panel/base_panel.html
@@ -55,7 +55,7 @@
         </ul>
     </header>
     <main>
-
+        {% block mensaje %}{% endblock mensaje %}
         {% block contenido_panel %}{% endblock contenido_panel %}
 
     </main>
