--- a/apps/users/templates/users/panel/panel.html
+++ b/apps/users/templates/users/panel/panel.html
@@ -30,8 +30,8 @@
                     <ul>
                         <li><a href="{% url 'matricula_app:registrar_matricula' %}">Matricula</a></li>
                         <li><a href="{% url 'matricula_app:pre_matricula' %}">Pre Matricula</a></li>
-                        <li><a href="buttons.html">Asistencia Docente</a></li>
-                        <li><a href="cards.html">Asistencia Admintrativo</a></li>
+                        <li><a href="{% url 'pagos_app:matricula_pendiente' %}">Registrar Pago</a></li>
+                        <li><a href="{% url 'asistencia_app:asistencia_docente' %}">Asistencia Docente</a></li>
                     </ul>
                 </div>
             </li>
