cambio bd docentes

--- a/apps/users/templates/users/panel/panel.html
+++ b/apps/users/templates/users/panel/panel.html
@@ -32,6 +32,7 @@
                         <li><a href="{% url 'matricula_app:pre_matricula' %}">Pre Matricula</a></li>
                         <li><a href="{% url 'pagos_app:matricula_pendiente' %}">Registrar Pago</a></li>
                         <li><a href="{% url 'asistencia_app:asistencia_docente' %}">Asistencia Docente</a></li>
+                        <li><a href="#">Ingresar Notas</a></li>
                     </ul>
                 </div>
             </li>
