--- a/apps/asistencia/templates/asistencia/asistencia_alumno.html
+++ b/apps/asistencia/templates/asistencia/asistencia_alumno.html
@@ -4,10 +4,10 @@
     <div class="container panel-container">
         <div class="row">
             <div class="col s5">
-                <a class="waves-effect waves-light btn btn-back" href="{% url 'asistencia_app:panel_aula' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
+                <a class="waves-effect waves-light btn btn-back" href="{% url 'asistencia_app:panel_docente' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
             </div>
             <div class="col s7">
-                <h5>Crear una nueva aula</h5>    
+                <h5>Registrar Asistencia</h5>    
             </div>
         </div>
 
