--- a/apps/matricula/templates/home/footer.html
+++ b/apps/matricula/templates/home/footer.html
@@ -1,17 +1,19 @@
  <footer class="page-footer cyan">
     <div class="container">
         <div class="row">
-            <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            <div class="col l6 s12">            
+                <p class="grey-text text-lighten-4">Av. de la Cultura, Nro. 733</p>
+                <p class="grey-text text-lighten-4">5to Piso Pabellón del Centro de Idiomas</p>
+                <p class="grey-text text-lighten-4">UNSAAC</p>
+                <p class="grey-text text-lighten-4">Cusco/Perú</p>
+                <p class="grey-text text-lighten-4">Telf: 084-237321</p>                
             </div>
             <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                  <li><a class="grey-text text-lighten-3" href="isc.unsaac.edu.pe">Web</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Email:waldo.ibarra@unsaac.edu.pe</a></li>
+                  <li><p class="face"><a class="grey-text text-lighten-3" href="https://facebook.com/isc.cusco" target="_blank"><i class="fa fa-facebook-square fa-lg"></i> Visitanos en Facebook</a></p></li>
                 </ul>
             </div>
         </div>
@@ -20,7 +22,7 @@
 
     <div class="footer-copyright">
         <div class="container">
-            © 2014 Copyright Text
+            ©2015 Instituto de Sistemas Cusco | ISC-UNSAAC
             <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
         </div>
     </div>
