--- a/apps/matricula/templates/home/index.html
+++ b/apps/matricula/templates/home/index.html
@@ -9,6 +9,33 @@
     <p>Bienvenido al sitio web del Instituto de Sistemas Cusco ISC-UNSAAC.</p>
     <div class="container">
         <div class="row">
+    <div class="slider">
+        <ul class="slides">            
+            <li>
+                <img src="{%static 'img/insti_avenida.jpg'%}">                
+                <div class="caption right-align">
+                    <h3>Local</h3>
+                    <h5>Ingreso al Pabellón del Instituto de Sistemas 5to piso.</h5>
+                </div>
+            </li>
+            <li>
+                <img src="{%static 'img/insti_detras.jpg'%}">
+                <div class="caption right-align">
+                    <h3>Local</h3>                
+                    <h5>Vista de la parte posterior del pabellón del Instituto de Sistemas Cusco.</h5>
+                </div>
+            </li>
+            <li>
+                <img src="{%static 'img/insti_frontis.jpg'%}">                
+                <div class="caption right-align">
+                    <h3>Local</h3>
+                    <h7>Vista del pabellón del Instituto de Sistemas desde la avenida por la puerta principal de la UNSAAC.</h7>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="container">
+        <div class="row">
     {% for curso in cursomes %}
         {% for asignatura in curso.asignatura.all %}
             <div class="col s12 m4 l4">
@@ -30,5 +57,13 @@
     {% endfor %}
         </div>
     </div>
+    <script>
+        $(document).ready(function){
+            $('.slider').slider({
+                indicators: false
+            });
+        }
+    </script>
     {% include "home/footer.html" %}
 {% endblock content %}
+
