--- a/apps/matricula/templates/home/footer.html
+++ b/apps/matricula/templates/home/footer.html
@@ -12,8 +12,8 @@
                 <h5 class="white-text">Links</h5>
                 <ul>
                   <li><a class="grey-text text-lighten-3" href="isc.unsaac.edu.pe">Web</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Email:waldo.ibarra@unsaac.edu.pe</a></li>
-                  <li><p class="face"><a class="grey-text text-lighten-3" href="https://facebook.com/isc.cusco" target="_blank"><i class="fa fa-facebook-square fa-lg"></i> Visitanos en Facebook</a></p></li>
+                  <li><a class="grey-text text-lighten-3" href="https://facebook.com/neunapp">Email:waldo.ibarra@unsaac.edu.pe</a></li>
+                  <li><p class="face"><a class="grey-text text-lighten-3" href="https://facebook.com/neunapp" target="_blank"><i class="fa fa-facebook-square fa-lg"></i> Visitanos en Facebook</a></p></li>
                 </ul>
             </div>
         </div>
@@ -23,7 +23,7 @@
     <div class="footer-copyright">
         <div class="container">
             ©2015 Instituto de Sistemas Cusco | ISC-UNSAAC
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            <a class="grey-text text-lighten-4 right" href="https://facebook.com/neunapp">creado por</a>
         </div>
     </div>
 </footer>
