--- a/apps/pagos/templates/procesos/pagos/matricula/lista_matricula.html
+++ b/apps/pagos/templates/procesos/pagos/matricula/lista_matricula.html
@@ -4,7 +4,7 @@
     <div class="container panel-container">
       <div class="row">
         <div class="col s6 m8">
-          <h6>Hay <span class="panel-count">{{ cantidad }}</span> aulas</h6>
+          <h6>Hay <span class="panel-count">{{ cantidad }}</span> Pagos</h6>
         </div>
         <div class="col s6 m4">
           <!-- <a class="waves-effect waves-light btn" href="{% url 'asistencia_app:agregar_aula' %}"><i class="fa fa-plus left"></i>agregar aula</a> -->
@@ -16,10 +16,9 @@
         <thead>
           <tr>
               <th>Nombres</th>
-              <th>otros</th>
-              <th>otros</th>
-              <th>otros</th>
-              <th>otros</th>              
+              <th>Saldo</th>
+              <th>Modulo</th>
+              <th>Fecha</th>
           </tr>
         </thead>
         <tbody>
@@ -27,9 +26,9 @@
           {% for matricula in  object_list %}
             <tr>
               <td>{{ matricula.alumno }}</td>
-              <td>otros</td>
-              <td>otros</td>
-              <td>otros</td>
+              <td>{{matricula.saldo}}</td>
+              <td>{{matricula.modulo}}</td>
+              <td>{{matricula.fecha_matricula}}</td>
               <td>
                 <a href="{% url 'pagos_app:pago_matricula' matricula.pk %}" class="waves-effect waves-light btn panel-btn green"><i class="fa fa-eye"></i></a>                
               </td>
