--- a/apps/users/templates/cajero/panel.html
+++ b/apps/users/templates/cajero/panel.html
@@ -2,7 +2,7 @@
 
 {% block title %}panel{% endblock title %}
 
-  {% block titulo_nav %} Panel de Cajero{% endblock titulo_nav %}
+  {% block titulo_nav %} Panel de Administrador{% endblock titulo_nav %}
 
     {% block funciones %}
     <li class="no-padding">
