--- a/apps/matricula/templates/matricula/index.html
+++ b/apps/matricula/templates/matricula/index.html
@@ -1,4 +1,4 @@
-{% extends "users/panel/panel.html" %}
+{% extends "panel_matricula/panel.html" %}
 
 {% block contenido_panel %}
     <div class="container panel-container">
