--- a/apps/notas/templates/notas/registrar_nota.html
+++ b/apps/notas/templates/notas/registrar_nota.html
@@ -1,13 +1,13 @@
-{% extends "panel_caja/panel.html" %}
+{% extends "panel_docente/panel.html" %}
 
 {% block contenido_panel %}
     <div class="container panel-container">
         <div class="row">
             <div class="col s5">
-                <a class="waves-effect waves-light btn btn-back" href="{% url 'pagos_app:panel_descuento' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>  
+                <a class="waves-effect waves-light btn btn-back" href="{% url 'asistencia_app:panel_docente' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
             </div>
             <div class="col s7">
-                <h5>Modificando: el descuento {{ descuento }}</h5>    
+                <h5>Registrar Nota</h5>    
             </div>
         </div>
 
@@ -20,30 +20,22 @@
             <div class="divider"></div>
         {% endif %}
         <div class="row">
-            <div class="col s12 m6 l6">
+            <div class="col s12 m12 l12">
                 <div class="card-panel">
                     <div class="row">
-                        <form class="col s12" action="{% url 'pagos_app:modificar_descuento' descuento.pk %}" method="POST">{% csrf_token %}
-                            
+                        <form class="col s12" method="POST" enctype="multipart/form-data">{% csrf_token %}
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.tipo_descuento }}
-                                    {{ form.tipo_descuento.label_tag }}
+                                   <p>Alumno:{{matricula.alumno}} </p>
                                 </div>
                             </div>
-                            
+                            <p>Ingresar Nota Alumno:</p> 
+                            {{form}}
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.porcentaje }}
-                                    {{ form.porcentaje.label_tag }}
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <button class="btn cyan waves-effect waves-light right" type="submit" name="action">actualizar
+                                      <button class="btn cyan waves-effect waves-light right" type="submit" name="action">guardar
                                         <i class="mdi-content-send right"></i>
-                                    </button>
+                                      </button>
                                 </div>
                             </div>
                         </form>
