--- a/apps/pagos/templates/mantenimientos/estructurapagos/detalle_estructurapagos.html
+++ b/apps/pagos/templates/mantenimientos/estructurapagos/detalle_estructurapagos.html
@@ -1,4 +1,4 @@
-{% extends "users/panel/panel.html" %}
+{% extends "panel_caja/panel.html" %}
 
 {% block contenido_panel %}
     <div class="container panel-container">
