--- a/apps/pagos/templates/procesos/comprobante_panel.html
+++ b/apps/pagos/templates/procesos/comprobante_panel.html
@@ -1,4 +1,4 @@
-{% extends "users/panel/panel.html" %}
+{% extends "panel_caja/panel.html" %}
 
 {% block contenido_panel %}
     <div class="container panel-container">
