--- a/apps/users/templates/users/panel/base_panel.html
+++ b/apps/users/templates/users/panel/base_panel.html
@@ -37,10 +37,10 @@
                   </div>
                   <div class="col col-profile s8">
                     <ul id="profile-dropdown" class="dropdown-content">
-                      <li><a href="#"><i class="mdi-action-face-unlock"></i> Perfil</a>
+                      <li><a href="/"><i class="mdi-action-face-unlock"></i> inicio</a>
                       </li>
                       <li class="divider"></li>
-                      <li><a href="#"><i class="mdi-hardware-keyboard-tab"></i> Salir</a>
+                      <li><a href="{% url 'users_app:logout' %}"><i class="mdi-hardware-keyboard-tab"></i> Salir</a>
                       </li>
                     </ul>
                     <a class="waves-effect waves-light btn-flat white-text dropdown-button profile-btn" data-activates="profile-dropdown">{{ user.first_name }}<i class="mdi-navigation-arrow-drop-down right-profile"></i></a>
