--- a/apps/asistencia/templates/horario/panel_horario.html
+++ b/apps/asistencia/templates/horario/panel_horario.html
@@ -7,7 +7,7 @@
           <h6>Hay <span class="panel-count">5</span> horarios</h6>
         </div>
         <div class="col s6 m4">
-          <a class="waves-effect waves-light btn" href="{% url 'asistencia_app:agregar_horario' %}"><i class="fa fa-plus left"></i>agregar horario</a>
+          <a class="waves-effect waves-light btn" href="{% url 'asistencia_app:panel_horario' %}"><i class="fa fa-plus left"></i>agregar horario</a>
         </div>
       </div>
       <div class="divider"></div>
