--- a/apps/matricula/templates/confirmacion.html
+++ b/apps/matricula/templates/confirmacion.html
@@ -25,7 +25,7 @@
                     
                     <div class="row">
                      <div class="col s5">
-                        <a class="waves-effect waves-light btn btn-back" href="{% url 'matricula_app:inicio' %}"><i class="fa fa-chevron-left left"></i>Aceptar</a>  
+                        <a class="waves-effect waves-light btn btn-back" href="{% url 'users_app:verificar_panel' %}"><i class="fa fa-chevron-left left"></i>Aceptar</a>  
                       </div>
                     </div>
                     <div class="row">
