--- a/apps/notas/templates/panel_docente/pnel.html
+++ b/apps/notas/templates/panel_docente/pnel.html
@@ -10,8 +10,8 @@
             <li class="bold"><a class="collapsible-header  waves-effect waves-teal">Procesos</a>
                 <div class="collapsible-body">
                     <ul>
-                        <li><a href="{% url 'notas_app:listar_cursos' %}">Registrar Notas </a></li>
-                        <li><a href="{% url 'asistencia_app:asistencia_docente' %}">Asistencia</a></li>
+                        <li><a href="{% url 'notas_app:listar_cursos' %}">Registrar Notas y Asistencia </a></li>
+                        <li><a href="{% url 'asistencia_app:asistencia_docente' %}">Marcar Asistencia Docente</a></li>
                         <li><a href="#">subir silabu</a></li>
                     </ul>
                 </div>
