--- a/apps/users/templates/alumno/panel.html
+++ b/apps/users/templates/alumno/panel.html
@@ -10,6 +10,7 @@
                     <ul>
                         <li><a href="{% url 'matricula_app:pre_matricula' %}">Pre Matricula</a></li>
                         <li><a href="{% url 'matricula_app:registrar_matricula' %}">Matricula</a></li>
+                        <li><a href="{% url 'matricula_app:constancia_matricula' %}">Constancia Matricula</a></li>
                         <li><a href="{% url 'matricula_app:consultar_notas_alumno' %}">Consultar Notas</a></li>
                     </ul>
                 </div>
