--- a/apps/cursolibre/templates/modificar_libre.html
+++ b/apps/cursolibre/templates/modificar_libre.html
@@ -1,4 +1,4 @@
-{% extends "panel_docente/panel.html" %}
+{% extends "panel_caja/panel.html" %}
 
 {% block contenido_panel %}
     <div class="container panel-container">
@@ -7,7 +7,7 @@
                 <a class="waves-effect waves-light btn btn-back" href="{% url 'users_app:verificar_panel' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
             </div>
             <div class="col s7">
-                <h5>Registrar Nota</h5>    
+                <h5>Pagar Curso Libre: {{ matricula_l.asignatura }}</h5>    
             </div>
         </div>
 
@@ -20,21 +20,29 @@
             <div class="divider"></div>
         {% endif %}
         <div class="row">
-            <div class="col s12 m12 l12">
+            <div class="col s12 m6 l6">
                 <div class="card-panel">
                     <div class="row">
-                        <form class="col s12" method="POST" enctype="multipart/form-data">{% csrf_token %}
+                        <form class="col s12" action="{% url 'pagos_app:pago_matricula_libre' form.pk %}" method="POST">{% csrf_token %}
+                            
                             <div class="row">
                                 <div class="input-field col s12">
-                                   <p>Alumno:{{matricula.alumno}} </p>
-                                   <p>Asignatura:{{asignatura.nombre}} </p>
+                                    {{ form.alumno }}
+                                    {{ form.alumno.label_tag }}
+                                    {{ form.asignatura }}
+                                    {{ form.asignatura.label_tag }}
+                                    {{ form.fecha }}
+                                    {{ form.saldo }}
+                                    {{ form.ciclo }}
+                                    {{ form.estado }}
+                                    {{ form.estado.label_tag }}
+
                                 </div>
                             </div>
-                            <p>Ingresar Nota Alumno:</p> 
-                            {{form}}
+
                             <div class="row">
                                 <div class="input-field col s12">
-                                      <button class="btn cyan waves-effect waves-light right" type="submit" name="action">guardar
+                                      <button class="btn cyan waves-effect waves-light right" type="submit" name="action">actualizar
                                         <i class="mdi-content-send right"></i>
                                       </button>
                                 </div>
