--- a/apps/users/templates/cajero/panel.html
+++ b/apps/users/templates/cajero/panel.html
@@ -12,7 +12,7 @@
                     <ul>
                         <li><a href="{% url 'pagos_app:matricula_pendiente' %}">Registrar Pago</a></li>
                         <li><a href="{% url 'pagos_app:panel_descuento' %}">Descuentos</a></li>
-                        <li><a href="{% url 'pagos_app:panel_estructurapagos' %}">Estructura de pagos</a></li>
+                        <li><a href="{% url 'pagos_app:pago_matricula_libre_view' %}">Pago Curso Libre</a></li>
                     </ul>
                 </div>
             </li>
